--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,14 @@
-@import '_variables-extend';
+@import '_variables';
+
+@import '_mixins';
 
 // stylesheet mobile //
 @import '_base';
 
 // stylesheet tablet //
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-    @import '_tablet';
-}
+// @media screen and (min-width: 768px) and (max-width: 1024px) {
+//     @import '_tablet';
+// }
 // stylesheet desktop //
 @media screen and (min-width: 1024px) {
     @import '_desktop';
