--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -1,40 +1,69 @@
 .container {
 max-width: 2560px;
-display: grid;
-column-gap: 2rem;
-row-gap: 1rem;
-grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-grid-template-rows: 0.1fr 1.1fr 0.4fr 0.7fr 1fr 0.1fr;
-grid-template-areas: 
-"header header header header header header"
-"intro intro intro intro intro intro"
-"education education experience experience skills skills"
-"about about about about about about"
-"portfolio portfolio portfolio portfolio portfolio portfolio"
-". . contact contact . .";
-    h3 {font-size: 1.7rem;}
-    li {font-size: 1.3rem;}
-    &__intro {
-        #logo {
+}
+h3 {font-size: 1.7rem;}
+li {font-size: 1.3rem;}
+.container__intro {
+    display: flex;
+
+    #logo {
+        padding: 5rem;
         width: 400px;
         height: 400px; 
-        }
-        .intro__menu {
-            width: 50%;
-        }
-        .intro__menu-ul {
-            display: flex;
-            justify-content: space-between;
-        }
-        .intro__menu-link {
-            font-size: 3rem;
-            list-style-type: none;
-        }
     }
-    &__about {
-        p {
-            margin: 2% 25%;
-            font-size: 1.4rem;
-        }
+}
+
+.menu__nav {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 3rem 0;
+  
+    ul {
+      padding: 0;
+      margin: 0;
+      display: flex;
+    }
+    .menu__nav-li {
+        padding: 1rem 0;
+        list-style-type: none;
+        margin: 1rem;
+        text-shadow: 2px 2px 2px black;
+      }
+      .menu__nav-link {
+        text-decoration: none;
+        font-size: 2.5rem;
+        font-weight: 400;
+        padding: 0;
+        margin: 0;
+        position: relative;
+        top: 0;
+        width: 100%;
+      }
+      a:active {
+        background-color: black;
+      }
+      .menu__nav-link::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 4px;
+        background: currentColor;
+        transform: scaleX(0);
+        transform-origin: right;
+        transition: transform 250ms ease-in;
+      }
+      .menu__nav-link:hover::after {
+        color: rgb(230, 112, 121);
+        transform: scaleX(1);
+        transform-origin: left;
+      }
+}
+.container__about {
+    p {
+        margin: 2% 25%;
+        font-size: 1.4rem;
     }
 }
