--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,25 +1,3 @@
-// * {box-sizing: border-box;}
-
-// rgb(5, 60, 94)
-// rgb(29, 57, 88)
-// rgb(53, 54, 82)
-// rgb(76, 51, 77)
-// rgb(100, 48, 71)
-// rgb(124, 46, 65)
-// rgb(148, 43, 59)
-// rgb(171, 40, 54)
-// rgb(195, 37, 48)
-// rgb(219, 34, 42)
-// //nuvarande bg
-// rgb(29, 53, 87);
-// //loader bg
-// rgb(4, 17, 36);
-// //hover
-// rgb(230, 112, 121)
-// //border repo och kontakt
-// rgb(230, 57, 70)
-
-
 body {
   background-color: rgb(29, 53, 87);
   font-family: $font-stack;
@@ -59,12 +37,12 @@ body {
   }
 }
 
-hr {
-  border: rgb(230, 57, 70) 3px solid;
-  border-radius: 20px;
-  margin-bottom: 5rem;
-  width: 60%;
-}
+// hr {
+//   border: rgb(230, 57, 70) 3px solid;
+//   border-radius: 20px;
+//   margin-bottom: 5rem;
+//   width: 60%;
+// }
 
 // intro startpage //
 .container__intro {
@@ -187,28 +165,26 @@ hr {
 
 // portfolio view //
 .container__repos {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  margin: auto;
 
-   h3 {@include h3-shared;}
+  h3 {@include h3-shared;}
 
   #githubRepos {
-    display: flex;
-    justify-content: center;
+    margin: 3%;
   }
   #githubUl {
-    margin: 0;
+    margin: auto;
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   .repo__list {
+    width: 200px;
     padding: 1rem;
-    max-width: 100%;
-    margin: 1rem;
+    margin: 5%;
     border: 0.3rem solid rgb(230, 57, 70);
     border-radius: 30px;
-    width: 300px;
-    height: 4rem;
     list-style: none;
     text-align: center;
   }
@@ -241,62 +217,64 @@ hr {
 
 // footer + contact info //
 .container__contact {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-border: 0.3rem solid rgb(230, 57, 70);
-border-radius: 30px;
-padding: 2rem;
-margin: 3rem;
-  h4 {
-    font-size: 1.2rem;
-    margin: 1%;
-  }
-  address {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    font-size: 1rem;
-  }
-  .contact__mail {
-    text-decoration: none;
-    color: white;
-    position: relative;
-    top: 0;
-    margin: 2%;
-    padding: 1%;
-  }
-  .contact__mail::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    background: currentColor;
-    transform: scaleX(0);
-    transform-origin: right;
-    transition: transform 250ms ease-in;
-  }
-  .contact__mail:hover::after {
-    color: rgb(230, 112, 121);
-    transform: scaleX(1);
-    transform-origin: left;
-  }
-  .fab {
-    font-size: 3rem;
-    color:rgb(255, 255, 255);
-    margin: 4px;
-  }
-  .fab:hover {color: rgb(230, 112, 121);}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  border: 0.3rem solid rgb(230, 57, 70);
+  border-radius: 30px;
+  padding: 1rem;
+  margin: 3rem;
+    h4 {
+      font-size: 1.2rem;
+      margin-top: 1rem;
+    }
+    address {
+      display: flex;
+      padding: 2rem 0;
+      flex-wrap: wrap;
+      width: 200px;
+      justify-content: center;
+      font-size: 1rem;
+    }
+    .contact__mail {
+      text-decoration: none;
+      color: white;
+      position: relative;
+      top: 0;
+      margin: 2%;
+      padding: 1%;
+    }
+    .contact__mail::after{
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 2px;
+      background: currentColor;
+      transform: scaleX(0);
+      transform-origin: right;
+      transition: transform 250ms ease-in;
+    }
+    .contact__mail:hover::after {
+      color: rgb(230, 112, 121);
+      transform: scaleX(1);
+      transform-origin: left;
+    }
+    .fab {
+      font-size: 3rem;
+      color:rgb(255, 255, 255);
+      margin: 4px;
+      padding: 1rem;
+    }
+    .fab:hover {color: rgb(230, 112, 121);}
 
-  .contact__img {
-    border-radius: 50%;
-    box-shadow: 0rem 0rem 1rem 1rem rgba(219, 34, 42, 0.9);
-    margin-top: 4vh;
-    width: 250px;
-    height: 250px;
-  }
+    .contact__img {
+      border-radius: 50%;
+      box-shadow: 0rem 0rem 1rem 1rem rgba(219, 34, 42, 0.9);
+      margin: 5%;
+      width: 200px;
+      height: 200px;
+    }
 }
